--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Laila:wght@400;500;600&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,300&family=REM&display=swap');
+
 /* Wildcard selector to override default styles */
 * {
     padding: 0;
@@ -12,6 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     /* General styles */
+    font-family: 'Laila', sans-serif;
 }
 
 header {
