--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Laila:wght@400;500;600&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,300&family=REM&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Laila:wght@400;500;600&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,300&family=REM&family=Yantramanav:wght@300;400;500&display=swap');
 
 /* Wildcard selector to override default styles */
 * {
@@ -15,12 +15,13 @@ body {
     display: flex;
     flex-direction: column;
     /* General styles */
-    font-family: 'Laila', sans-serif;
+    font-family: 'Yantramanav', sans-serif;
 }
 
 header {
     background-color: #fa00a6;
     color: #f9f871;
+    font-family: 'Laila', sans-serif;
 }
 
 main {
@@ -34,5 +35,5 @@ main {
 footer {
     background-color: #ffd150;
     color: #00d0ff;
-    /*margin-top: auto;*/
+    font-family: 'Laila', sans-serif;
 }
