--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,11 @@ header {
     background-color: #fa00a6;
     color: #f9f871;
     font-family: 'Laila', sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: x-large;
+    text-align: center;
+    padding: 20px;
 }
 
 main {
