--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,5 +47,16 @@ footer {
 
 footer i {
     color:#00d0ff;
-    font-size: 150%;
+    font-size: 170%;
+}
+
+/* Make site responsive by using media queries */
+@media only screen and (min-width: 1024px) {
+    header {
+        font-size: xxx-large;
+    }
+
+    footer {
+        font-size: x-large;
+    }
 }
