--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,16 @@ body {
 header {
     background-color: #fa00a6;
     color: #ffd150;
+    position: fixed;
+    z-index: 999;
+    width: 100vw;
     font-family: 'Laila', sans-serif;
     text-transform: uppercase;
     font-weight: 800;
     font-size: xx-large;
     text-align: center;
     padding: 20px;
+    box-shadow: 0 2px 2px #ffd150;
 }
 
 main {
