--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,66 @@ main {
     margin-top: 122px;
     background-color: #cfd80d;
     color: #015d45;
+    display: flex;
+    flex-direction: column;
     /* Main content to take up all space between header and footer 
     Credit: Code Institute Video "Setting up some basic CSS styles" */
     flex: 1 0 auto;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Home page */
+
+#container {
+    /*border:2px solid #015d45;*/
+    width: 90vw;
+    padding: 5px;
+    margin-top: 10px;
+}
+
+#heading {
+    text-align: center;
+    /*border: solid red;*/
+}
+
+#user-section {
+    /*border: solid green;*/
+}
+
+#user-div {
+    /*border: solid blue;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+    font-size: x-large;
+    font-weight: bold;
+}
+
+#input-name {
+    border:2px solid #015d45;
+    border-radius: 5px;
+    min-height: 3rem;
+    min-width: 10rem;
+    margin-top: 0.5rem;
+    text-align: center;
+    background-color: #f9f871;
+    color:#015d45;
+    font-size: large;
+}
+
+/* Change placeholder color and opacity 
+credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
+::placeholder {
+    color: #015d45;
+    opacity: 80%;
+    font-size: large;
+    text-align: center;
 }
 
 footer {
-    /*background-color: #ffd150;*/
     background-color: #00d0ff;
     color: #f9f871;
     font-family: 'Laila', sans-serif;
