--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     text-align: center;
 }
 
-#submit-button {
+.button {
     width: 7rem;
     min-height: 2rem;
     border-radius: 5px;
@@ -120,6 +120,14 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     font-weight: bold;
     background-color: #00d0ff;
     border: none;
+}
+
+#rules {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
 }
 
 /* Footer */
