--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
 }
 
 .button {
-    width: 7rem;
+    min-width: 8rem;
     min-height: 2rem;
     border-radius: 5px;
     /*border: solid 2px #015d45;*/
@@ -127,7 +127,7 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin: 30px 0px;
 }
 
 /* Footer */
