--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,18 @@ footer i {
         margin-top: 115px;
     }
 
+    #container {
+        font-size: larger;
+    }
+
     footer {
+        font-size: x-large;
+    }
+}
+
+/* Large screens with 1440px width and larger */
+@media only screen and (min-width: 1440px) {
+    #container {
         font-size: x-large;
     }
 }
