--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,17 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     margin: 30px 0px;
 }
 
+#rules-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
 /* Footer */
 
 footer {
