--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,16 +130,42 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     margin: 30px 0px;
 }
 
+/* Modal background box */
 #rules-modal {
-    display: none;
+    display: none; /* hidden when site loads */
     position: fixed;
     z-index: 1;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
+    background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4);
 }
+
+/* Modal content box */
+#modal-content {
+    background-color: #f9f871;
+    margin: 163px auto; /* 163px to make sure the modal box starts below the thickest possible header */
+    width: 85%;
+    padding: 1.8em;
+    border-radius: 2px;
+}
+
+/* Close Button X */
+#close {
+    float: right;
+    font-size: 1em;
+    font-weight: bold;
+    border: solid 1px #015d45;
+    padding: 0.1em 0.4em;
+    background-color: #ffd150;
+}
+
+/*#close:hover,
+#close:focus {
+    background-color: #015d45;
+    color: #ffd150;
+}*/
 
 /* Footer */
 
