--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,14 +175,6 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     cursor: pointer;
 }
 
-/*#close-modal:hover,
-#close-modal:focus {
-    background-color: #015d45;
-    color: #ffd150;
-}*/
-
-/* Game.html page */
-
 #question-field {
     color:#fa00a6;
     font-size: 1.5em;
@@ -190,7 +182,6 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     padding: 0.2em;
     margin: 0.2em;
     font-weight: bold;
-    /*background-color: #f9f871;*/
 }
 
 #answer-buttons {
@@ -271,6 +262,10 @@ footer i {
 
     .btn {
         width: 80vw;
+    }
+
+    #question-field {
+        font-size: 2.5em;
     }
 }
 
