--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,7 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     color:#fa00a6;
     font-size: 1.5em;
     text-align: center;
-    padding: 0.2em;
+    padding: 0.2em 0.4em;
     margin: 0.2em;
     font-weight: bold;
 }
@@ -196,11 +196,12 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
     width: 90vw;
     background-color: #f9f871;
     font-size: 1em;
-    font-weight: bolder;
     margin: 0.5em;
-    padding: 0.3em 0.4em;
+    padding: 0.4em 0.6em;
     text-align: left;
     cursor: pointer;
+    letter-spacing: 0.03em;
+    line-height: 1.3;
 }
 
 .btn:hover:not([disabled]) {
@@ -213,14 +214,15 @@ credits: https://www.w3schools.com/howto/howto_css_placeholder.asp */
 
 #next-btn {
     display: none;
+    margin: 1.5em;
 }
 
 .correct {
-    background-color: lightgreen;
+    background-color: #b1fbb7;
 }
 
 .incorrect {
-    background-color: lightcoral;
+    background-color: #ffc3c3;
 }
 
 /* Footer */
@@ -281,6 +283,10 @@ footer i {
 
     #container {
         font-size: larger;
+    }
+
+    .btn {
+        font-weight: bolder;
     }
 
     footer {
