Add h4 element to section based on vlidator feedback

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,10 @@ main {
     align-items: center;
 }
 
+h4 {
+    display: none;
+}
+
 #user-div {
     display: flex;
     flex-direction: column;
