Rewrite functions to make them more atomic and ensure good readability and reuseability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* ALL OF THE CODE IN THIS FILE IS MY CODE UNLESS INDICATED OTHERWISE */
+
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Laila:wght@400;500;600&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,300&family=REM&family=Yantramanav:wght@300;400;500&display=swap');
 
